<resources>
    <string name="app_name">WalpaperApps</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="woman">Woman</string>
    <string name="nature">Nature</string>
    <string name="animasl">Animasl</string>
    <string name="_4k">4K</string>
    <string name="fasion">Fasion</string>
    <string name="flowers">Flowers</string>
    <string name="beautyfull">Beautyfull</string>
</resources>